# notepad_gtk_test

./: README.md  meson.build
data/: goshapps-notepad.desktop
